--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^8.4.3",
     "@ionic/cli": "^7.2.0",
     "firebase": "^11.3.1",
+    "gsap": "^3.12.7",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
